Master: fix small bugs